# opencv-cuda-jetson-docker

./: .gitattributes  .gitignore  LICENSE  README.md  docker-compose.provadusty.yml  docker-compose.yml  pyproject.toml  test.py  test_opencv_build.py
buildedcv/: Dockerfile  old_dockerfile
installer/: OpenCV-4.8.0-aarch64.sh
test_scripts/: mp_occlusion.py  test_mp_num_pose.py
ubuntu-18.04/: Dockerfile  docker-compose.yml
ubuntu18.04-py3.10.11-opencv4.8.0/: Dockerfile  docker-compose.yml
ubuntu18.04-py3.10.11-opencv4.8.0/build_opencv/: Dockerfile  build_opencv.sh
ubuntu18.04-py3.10.11/build_python3.10.11/: Dockerfile
ubuntu18.04-py3.11.3/build_python3.11.3/: Dockerfile
ubuntu18.04-py3.6.9-mediapipe0.8.5/: Dockerfile  docker-compose.yml
ubuntu18.04-py3.6.9-opencv4.8.0/: Dockerfile
ubuntu18.04-py3.6.9-opencv4.8.0/build_opencv/: build_opencv.sh
ubuntu18.04-py3.8.0-opencv4.8.0/: Dockerfile
ubuntu18.04-py3.8.0-opencv4.8.0/build_opencv/: Dockerfile  build_opencv.sh
ubuntu18.04-py3.8.0-opencv4.8.0/installer/: OpenCV-4.8.0-aarch64.sh
