[tool.poetry]
name = "opencv-jetson"
version = "0.1.0"
description = ""
authors = ["Federico Lanzani <federico@federicolanzani.com>"]
readme = "README.md"
packages = [{include = "opencv_jetson"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.1.78"
wget = "^3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
